--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>swingx-all-1.6.4</artifactId>
             <version>SNAPSHOT</version>
         </dependency>
+        <dependency>
+	<groupId>org.swinglabs.swingx</groupId>
+	<artifactId>swingx-core</artifactId>
+	<version>1.6.4</version>
+</dependency>
+
     </dependencies>
 
     <dependencyManagement>
