--- a/pom.xml
+++ b/pom.xml
@@ -69,13 +69,16 @@
             <artifactId>swingx-core</artifactId>
             <version>1.6.4</version>
         </dependency>
-    <dependency>
-	<groupId>org.slf4j</groupId>
-	<artifactId>slf4j-api</artifactId>
-	<version>1.5.6</version>
-      <type>jar</type>
-    </dependency>
-
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.6</version>
+        </dependency>
+        <dependency> 
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
