--- a/src/main/resources/languages.properties
+++ b/src/main/resources/languages.properties
@@ -21,7 +21,7 @@ room=Room
 price=Price
 change=Change
 unavailable=Unavailable
-filtered_rooms=\ filtered rooms
+filtered_rooms=Filtered rooms
 has_balcony=Has balcony
 name=Name
 guest=Guest
@@ -30,3 +30,6 @@ manage_guests=Manage guests
 manage_rooms=Manage rooms
 0_guests_filtered=0 filtered guests
 remove_accommodation=Remove accommodation
+arrival=Arrival
+departure=Departure
+filtered_guests=Filtered guests
