--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
             <groupId>org.apache.derby</groupId>
             <artifactId>derby</artifactId>
             <version>10.12.1.1</version>
-            <type>jar</type>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -79,6 +79,12 @@
             <artifactId>logback-classic</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
