--- a/src/main/resources/languages.properties
+++ b/src/main/resources/languages.properties
@@ -33,3 +33,5 @@ remove_accommodation=Remove accommodation
 arrival=Arrival
 departure=Departure
 filtered_guests=Filtered guests
+NUMBER_EXISTS=Room with the same number already exists
+WRONG_NUMBER_OF_BEDS=room can't have less beds than accommodated guests
