--- a/src/main/resources/languages.properties
+++ b/src/main/resources/languages.properties
@@ -35,3 +35,5 @@ departure=Departure
 filtered_guests=Filtered guests
 NUMBER_EXISTS=Room with the same number already exists
 WRONG_NUMBER_OF_BEDS=room can't have less beds than accommodated guests
+set_a_guest=Set a guest
+set_a_room=Set a room
