--- a/src/main/resources/languages.properties
+++ b/src/main/resources/languages.properties
@@ -37,3 +37,4 @@ NUMBER_EXISTS=Room with the same number already exists
 WRONG_NUMBER_OF_BEDS=room can't have less beds than accommodated guests
 set_a_guest=Set a guest
 set_a_room=Set a room
+DEPARTURE_AFTER_ARRIVAL=Departure must be after arrival
